update on dockerfile and README